--- a/config-server-dev.yml
+++ b/config-server-dev.yml
@@ -30,3 +30,6 @@ spring.datasource.druid.user:
     validation-query: SELECT 'x'
     time-between-eviction-runs-millis: 30000
     min-evictable-idle-time-millis: 300000
+
+server:
+  port: 7777
